# WebGPU-Engine

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt
.github/workflows/: generate-dependencies-windows.yml  generate-dependencies.yml
glfw/lib/: glfw3.lib
glfw3webgpu/: CMakeLists.txt  glfw3webgpu.c
src/: faceless.h  main.c  main.cpp
src/engine/core/: glfw_context.cpp  glfw_context.h  window.cpp  window.h
src/engine/wgpu/: adapter.c  adapter.cpp  adapter.h  bind_group.c  bind_group.h  buffer.c  buffer.cpp  buffer.h  command_buffer.cpp  command_buffer.h  command_encoder.c  command_encoder.cpp  command_encoder.h  device.c  device.cpp  device.h  instance.c  instance.cpp  instance.h  queue.c  queue.cpp  queue.h  render_pass_encoder.c  render_pass_encoder.cpp  render_pass_encoder.h  render_pipeline.c  render_pipeline.cpp  render_pipeline.h  shader_module.c  shader_module.cpp  shader_module.h  surface.c  surface.cpp  surface.h  texture_view.c  texture_view.cpp  texture_view.h  util.h
src/faceless/core/: window.c  window.h
src/faceless/wgpu/: adapter.c  adapter.h  buffer.c  buffer.h  command_buffer.c  command_encoder.c  command_encoder.h  device.c  device.h  instance.c  instance.h  queue.c  queue.h  render_pass_encoder.c  render_pass_encoder.h  render_pipeline.c  render_pipeline.h  shader_module.h  surface.c  surface.h  texture_view.h
vnd/webgpu/lib/cmake/Dawn/: DawnTargets.cmake
webgpu/lib/: tint_api.lib  tint_api_common.lib  tint_cmd_common.lib  tint_lang_core.lib  tint_lang_core_common.lib  tint_lang_core_intrinsic.lib  tint_lang_core_ir_analysis.lib  tint_lang_core_ir_type.lib  tint_lang_core_type.lib  tint_lang_glsl.lib  tint_lang_glsl_intrinsic.lib  tint_lang_glsl_ir.lib  tint_lang_glsl_validate.lib  tint_lang_hlsl.lib  tint_lang_hlsl_intrinsic.lib  tint_lang_hlsl_ir.lib  tint_lang_hlsl_type.lib  tint_lang_hlsl_validate.lib  tint_lang_hlsl_writer.lib  tint_lang_hlsl_writer_ast_printer.lib  tint_lang_hlsl_writer_ast_raise.lib  tint_lang_hlsl_writer_common.lib  tint_lang_hlsl_writer_helpers.lib  tint_lang_hlsl_writer_printer.lib  tint_lang_hlsl_writer_raise.lib  tint_lang_msl.lib  tint_lang_msl_intrinsic.lib  tint_lang_msl_ir.lib  tint_lang_msl_type.lib  tint_lang_spirv.lib  tint_lang_spirv_intrinsic.lib  tint_lang_spirv_ir.lib  tint_lang_spirv_reader.lib  tint_lang_spirv_reader_ast_lower.lib  tint_lang_spirv_reader_common.lib  tint_lang_spirv_reader_lower.lib  tint_lang_spirv_reader_parser.lib  tint_lang_spirv_type.lib  tint_lang_spirv_validate.lib  tint_lang_spirv_writer.lib  (+39 more)
